@@ -102,3 +102,6 @@ PE_UPLOAD_UNSUPPORTED = PrusaError(
 PE_UPLOAD_CONFLICT = PrusaError(
     '024xx', 'CURRENTLY PRINTED',
     'Uploaded file is the same as currently printed')
+PE_DOWNLOAD_CONFLICT = PrusaError(
+    '024xx', 'CURRENTLY PRINTED',
+    'Downloaded file is the same as currently printed')
