@@ -17,6 +17,7 @@
     * Log HTTP requests and errors over Python Logger
     * Improve FW error message support
     * Work around print head returning to the print after Stop print
+    * Added endpoint for download file from url
 
 0.4.0 (2021-04-13)
     * getting IP refactoring
